cluster/apps/networking/adguard/config-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-config-sync
  namespace: networking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-config-sync
  template:
    metadata:
      labels:
        app: adguard-config-sync
    spec:
      containers:
        - name: adguard-sync-to-secondary
          image: quay.io/bakito/adguardhome-sync
          command: ["/opt/go/adguardhome-sync"]
          args: ["run"]
          resources:
            requests:
              memory: 105M
              cpu: 15m
            limits:
              memory: 105M
