cluster/apps/networking/adguard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`adguard.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: adguard
          port: 3000
  tls:
    secretName: ${SECRET_CERT}
